hphp/test/zend7/Zend/tests/bug70689.php.expectf

Fatal error: %s
Stack trace:
#0 %sbug70689.php(12): foo()
#1 {main}
  thrown in %sbug70689.php on line 3